# UserManagementAPI

./: .gitignore  README.md  pyproject.toml
app/: cli.py  service.py  settings.py
app/common/api/: exceptions.py  service.py  settings.py  uvicorn_server.py
app/common/api/schemas/: health.py
app/common/database/: cli.py  service.py  settings.py
app/common/utils/: functools.py  package.py  settings.py
app/users/: __main__.py  cli.py  service.py  settings.py
app/users/api/: __init__.py  health.py  router.py  service.py  settings.py
app/users/api/rest/: router.py  schemas.py
app/users/api/rest/users/: dependencies.py  handlers.py  router.py  schemas.py
app/users/database/: __init__.py  cli.py  models.py  service.py  settings.py
app/users/database/migrations/: env.py
app/users/database/migrations/versions/: 942bfe4761ac_.py
tests/: conftest.py
tests/common/database/: conftest.py  test_common_database_service.py
tests/common/utils/: test_functools.py  test_package.py
tests/users/: conftest.py
tests/users/database/: conftest.py  test_users_database_service.py
