[tool.poetry]
name = "test"
version = "1.0.0"
authors = ["Alexandr Platonov"]
readme = "README.md"
description= "My test"


[tool.poetry.dependencies]
aiosqlite = { version = "^0.19.0", optional = true }
python = "^3.9"
facet = "^0.9.1"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
loguru = "^0.7.2"
aiofiles = "^23.2.1"
typer = {version = "^0.9.0", extras = ["all"]}
pydantic = {version = "^2.5.1", extras = ["email"]}
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"

[tool.poetry.extras]
sqlite = ["aiosqlite"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


